# bonfari-zola

./: config.toml  opzet_website.md  pyproject.toml  translate.py
content/: 2020-05-02-blablablba.md  2020-05-02-dxfhxfdhfghfgh-1 copy.md  2020-05-02-dxfhxfdhfghfgh-1.md  2020-05-02-dxfhxfdhfghfgh.md  2020-05-03-watertoren-project.md  _index.md  col_blogs.md  col_projects.md  col_vrijwilligers.md  doneren.en.md  doneren.md  first-post.md  vrijwilligerworden.en.md  vrijwilligerworden.md
content/blog/: 2020-01-01-financien.md  2020-05-02-dxfhxfdhfghfgh-1.md  2020-05-02-dxfhxfdhfghfgh.md  2020-05-03-watertoren-project.md  2020-07-21-value-based-volunteering-introductie.md  2020-10-05-hallo-tintinto copy.md  2020-10-05-hallo-tintinto.md  2020-10-07-het-offerfeest.md  2020-11-18-zoek-de-verschillen.md  2020-11-25-bonfari-werkt.md  2020-11-25-een-vrijwilligersorganisatie-starten-voor-dummies.md  2020-11-25-studeren-kun-je-leren.md  2020-11-25-two-friends-from-different-backgrounds.md  2021-03-08-value-based-volunteering-transparantie.md  2021-04-18-smartphone-actie-studenten.md  2021-06-12-value-based-volunteering-duurzame-relatie-met-de-lokale-bevolking.md  2021-11-30-value-based-volunteering-het-maximaliseren-van-de-impact-per-euro.md  2022-02-09-update-fatima-en-haddy.md  2022-04-03-update-schoolkraam-21-2-22.md  2022-09-25-bibliotheek-cats-and-dogs-boekenserie.md  (+9 more)
sass/: _bootstrap-overrides.scss  _global.scss  _masthead.scss  _mixins.scss  _navbar.scss  _post.scss  _variables.scss
templates/: blog.html  index.html  over.html  page.html  project.html  section.html
(+102 files in other folders)
