[tool.poetry]
name = "bonfari-zola"
version = "2.1.57"
description = "Bonfari et al. 2022"
authors = ["David en Simonito"]
license = "Bonfari et al. 2022"

[tool.poetry.dependencies]
python = "^3.8"
marko = "^1.2.0"
Markdown = "^3.3.6"
beautifulsoup4 = "^4.10.0"
deepl = "^1.4.0"
markdownify = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
